# Needle-Game

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  FileHandler.cpp  FileHandler.hpp  GlTriangle.cpp  GlTriangle.hpp  GlfwHandler.cpp  GlfwHandler.hpp  IDrawable.hpp  IHandler.hpp  Main.cpp  Needle.cpp  Needle.hpp  README.md  ZepHandler.cpp  ZepHandler.hpp
.github/workflows/: cmake.yml
assets/: heiroglyphics.md.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/zep/: CMakeLists.txt
libs/zep/m3rdparty/: logger.h
libs/zep/m3rdparty/animation/: timer.cpp
libs/zep/m3rdparty/file/: archive.cpp
libs/zep/m3rdparty/string/: stringutils.cpp
libs/zep/zep/: buffer.cpp  buffer.h  display.cpp  editor.cpp  editor.h  filesystem.cpp  filesystem.h  list.cmake  mode.cpp  mode_search.cpp  mode_search.h  mode_standard.cpp  mode_vim.cpp  scroller.cpp  scroller.h  splits.h  syntax.cpp  syntax_rainbow_brackets.cpp  tab_window.cpp  theme.h  window.cpp  zep.h
libs/zep/zep/imgui/: display_imgui.h  editor_imgui.cpp
libs/zep/zep/tests/: mode_standard.test.cpp
